2001-11-04  Jochen Wiedmann  <joe@ispsoft.de> (2.1001)

	* Quoting now based on mysql_real_escape_string. Thanks
	  to Dave Rolsky <autarch@urth.org> for suggesting this.

2001-11-02  Jochen Wiedmann  <joe@ispsoft.de> (2.1000)

	* Portability changes for MySQL 4.

2001-05-25  Jochen Wiedmann  <joe@ispsoft.de> (2.0901)

	* dbdimp.c: Fixed $dbh->{mysql_insertid}; added t/insertid.t

2001-04-01  Jochen Wiedmann  <joe@ispsoft.de> (2.0900)

	* Added transaction support for MySQL.
	  (Bob Lyons <lyons@nextrials.com>)
	* dbd/dbdimp.c: Fixed MAXLENGTH warning; used to hint for
	  a not existing mysql_maxlength, which should read
	  mysql_max_length. (Paul DuBois <paul@snake.net>)
	* Fixed installation problem when a directory was specified,
	  but did not exist. (Will Partain <partain@dcs.gla.ac.uk>)
	* Fixed that mysql_errno wasn't used properly. (Chris Adams
	  <cmadams@hiwaay.net>)
	* Fixed test suite problem, when user name and password
	  have been interpolated. (Bruno Hivert (LMC)
	  <lmcbrhi@lmc.ericsson.se>)
	* mysql_insertid and mysql_affectedrows are no longer treated
	  as integers, but longs. Thanks to Michael G Schwern
	  <schwern@pobox.com>.

2000-08-20  Jochen Wiedmann  <joe@ispsoft.de> (1.2215)

	* lib/DBD/mysql/Install.pm (Initialize): Adding -lz -lgz by
	  default now.
	* dbd/dbd.pm.in: Minor doc change.

2000-05-10  Jochen Wiedmann  <joe@ispsoft.de> (1.2214)

	* dbd/dbdimp.c: Fixed bug that timestamp fields weren't quoted.
	  Chris Winters <cwinters@intes.net>

2000-04-26  Jochen Wiedmann  <joe@ispsoft.de> (1.2213)

	* dbd/dbimon.in: Fixed tags in pod.

2000-04-15  Jochen Wiedmann  <joe@ispsoft.de> (1.2212)

	* Makefile.PL: Fixed use of builder-provided passwords.
	  Buck Huppmann <buckh@pobox.com>
	* Makefile.PL: Fixed WIN32 installation.

2000-04-03  Jochen Wiedmann  <joe@ispsoft.de> (1.2211)

	* Fixed $dbh->{Name} (David Jacobs <djacobs@mitre.org>)

1999-11-30  Jochen Wiedmann  <joe@ispsoft.de> (1.2210)
