@@ -1,3 +1,7 @@
+2001-11-04  Jochen Wiedmann  <joe@ispsoft.de> (2.1002)
+
+	* Added mysql_ssl flag to DBI->connect.
+
 2001-11-04  Jochen Wiedmann  <joe@ispsoft.de> (2.1001)
 
 	* Quoting now based on mysql_real_escape_string. Thanks
